fixed overflow container if box-shadow inside

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -456,6 +456,15 @@
 .pk-table-fake .uk-form-select { vertical-align: top; }
 
 
+/* Overflow Container (Finder: Thumbnail View)
+ ========================================================================== */
+
+.tm-overflow-container {
+    margin: -5px;
+    padding: 5px;
+}
+
+
 /* Thumbnail (Finder + Image Picker)
  ========================================================================== */
 
